--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,15 @@
         <activity android:name=".ui.login.RegisterActivity" /> <!-- 短信登录 -->
         <activity
             android:name=".ui.login.LoginActivity"
-            android:launchMode="singleTop" /> <!-- 输入验证码 -->
-        <activity android:name=".ui.login.VerifiCodeActivity" /> <!-- 搜索 -->
+            android:launchMode="singleTop" />
+        <activity android:name=".ui.login.VerifiCodeActivity"
+            android:windowSoftInputMode="stateVisible">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
         <activity android:name=".ui.search.SearchActivity" /> <!-- 店铺管理 -->
         <activity android:name=".ui.store.StoreManageActivity" /> <!-- 基本信息 -->
         <activity android:name=".ui.store.BasicInfoActivity" />
