--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.yiweiyi.www"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.01"
+        versionCode 4
+        versionName "1.04"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -81,23 +81,16 @@ dependencies {
     //banner
     implementation 'com.youth.banner:banner:2.1.0'
     //侧滑
-    implementation 'com.android.support:design:28.0.0'
-//    // Retrofit库-网络请求
-//    implementation 'io.reactivex:rxandroid:1.1.0'
-//    implementation 'io.reactivex:rxjava:1.1.5'
-//    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-//    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-//    implementation 'com.squareup.retrofit2:adapter-rxjava:2.9.0'
+    implementation 'com.android.support:design:30.0.0'
 
-    //图片加载
-//    implementation 'com.github.bumptech.glide:glide:4.11.0'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    //字母索引
-    implementation 'me.yokeyword:indexablerecyclerview:1.3.0'
 
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     api project(path: ':mylibrary')
     api 'com.android.support:multidex:1.0.0'
     implementation 'com.github.zengzhaoxing:SharpView:v2.4.4'
+    api 'com.dsiner.lib:slidelayout:1.0.3'
 
+    //字母索引
+    implementation 'me.yokeyword:indexablerecyclerview:1.3.0'
+//    implementation 'com.github.D10NGYANG:DL10SideBar:1.0.0'
 }
