--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,9 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".details.ProdcataActivity"></activity>
-        <activity android:name=".details.DetailsActivity" />
+        <activity android:name=".ui.details.LikelistActivity"></activity>
+        <activity android:name=".ui.details.ProdcataActivity" />
+        <activity android:name=".ui.details.DetailsActivity" />
 
         <meta-data
             android:name="design_width_in_dp"
@@ -44,13 +45,16 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:launchMode="singleTop" />
-        <activity android:name=".ui.login.VerifiCodeActivity"
+        <activity
+            android:name=".ui.login.VerifiCodeActivity"
             android:windowSoftInputMode="stateVisible">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+<!--             <intent-filter>-->
+<!--             <action android:name="android.intent.action.MAIN" />-->
+
+
+<!--             <category android:name="android.intent.category.LAUNCHER" />-->
+<!--             </intent-filter>-->
         </activity>
         <activity android:name=".ui.search.SearchActivity" /> <!-- 店铺管理 -->
         <activity android:name=".ui.store.StoreManageActivity" /> <!-- 基本信息 -->
@@ -59,7 +63,10 @@
         <activity android:name=".ui.search.BusinessDisplayActivity" /> <!-- 网页 -->
         <activity android:name=".web.CommonWebActivity" /> <!-- 联系电话 -->
         <activity android:name=".ui.store.PhoneListActivity" /> <!-- 选择地区 -->
-        <activity android:name=".ui.search.SelectRegionActivity" />
+        <activity android:name=".ui.search.SelectRegionActivity"
+            android:alwaysRetainTaskState="true"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
         <activity
             android:name=".wxapi.WXEntryActivity"
             android:exported="true"
