--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,14 @@ android {
         applicationId "com.yiweiyi.www"
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 4
-        versionName "1.04"
+        versionCode 7
+        versionName "1.07"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a"
+        }
     }
 
     signingConfigs {
@@ -59,7 +63,7 @@ static def releaseTime() {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     testImplementation 'junit:junit:4.13'
@@ -82,15 +86,14 @@ dependencies {
     implementation 'com.youth.banner:banner:2.1.0'
     //侧滑
     implementation 'com.android.support:design:30.0.0'
-
-
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     api project(path: ':mylibrary')
     api 'com.android.support:multidex:1.0.0'
     implementation 'com.github.zengzhaoxing:SharpView:v2.4.4'
     api 'com.dsiner.lib:slidelayout:1.0.3'
-
     //字母索引
     implementation 'me.yokeyword:indexablerecyclerview:1.3.0'
-//    implementation 'com.github.D10NGYANG:DL10SideBar:1.0.0'
+    api 'org.greenrobot:eventbus:3.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
 }
