--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
         <activity android:name=".ui.login.RegisterActivity" /> <!-- 短信登录 -->
         <activity
             android:name=".ui.login.LoginActivity"
+            android:windowSoftInputMode="stateVisible"
             android:launchMode="singleTop" />
         <activity
             android:name=".ui.login.VerifiCodeActivity"
